<resources>
    <string name="app_name">CovidSupport</string>
    <string name="new_cases">Nowych zachorowań</string>
    <string name="new_deaths">Nowych zgonów</string>
    <string name="cases">Ogólnie zachorowań</string>
    <string name="deaths">Ogólnie zgonów</string>
    <string name="flag">Flaga</string>
    <string name="statistics">Statystyki ze świata</string>
    <string name="button_regions_text">Sprawdź, w jakiej strefie znajduje się twój powiat</string>
    <string name="info_button_text">Podstawowe zasady bezpieczeństwa</string>
    <string name="overall_chart">Liczba zachorowań i zgonów od początku epidemii</string>
    <string name="new_cases_chart">Liczba nowych zachorowań w ciągu ostatnich 14 dni</string>
    <string name="new_deaths_chart">Liczba nowych zgonów w ciągu ostatnich 14 dni</string>
    <string name="sytuacja_w_polsce">Sytuacja w Polsce</string>
    <string name="header_text_bot">Zadaj pytanie, a otrzymasz odpowiedz</string>
    <string name="world">Świat</string>
    <string name="poland">Polska</string>
    <string name="qa">FAQ</string>
    <string name="recovered_chart">Liczba osób wyleczonych z koronawirusa od początku epidemii</string>
    <string name="stateDate">Stan na</string>
    <string name="ask_bot">Zadaj pytanie</string>
    <string name="wojewodztwo">Województwo:</string>
    <string name="liczba_zgonow">Liczba przypadków śmiertelnych:</string>
    <string name="dane_z_dnia">Dane z dnia</string>
    <string name="liczba_przypadkow">Liczba zarażeń:</string>
    <string name="search">Wyszukaj..</string>
    <string name="close">Zamknij</string>
    <string name="powr_t_do_mapy_polski">Powrót do mapy Polski</string>
    <string name="under_map_text">Liczba zarażeń oraz przypadków śmiertelnych liczona od początku pandemii, liczba aktywnych przypadków oznacza liczbę przypadków w tym momencie, zmiana aktywnych przypadków oznacza zmianę aktywnych przypadków w odniesieniu do dnia poprzeniego.</string>
    <string name="wybierz_wojewodztwo">Aby zobaczyć liczbę zarażeń oraz przypadków śmiertelnych z dnia dzisiejszego wybierz województwo z listy:</string>
    <string name="covidinfo">CovidINFO</string>
    <string name="dateLabel">Data</string>
    <string name="cases_chart">Liczba zachorowań od początku epidemii</string>
    <string name="deaths_chart">Liczba zgonów od początku epidemii</string>
    <string name="recovered">Liczba ozdrowieńców</string>
    <string name="active">"Liczba aktywnych przypadków"</string>
    <string name="tests">Ogólnie testów</string>
    <string name="critical">W stanie krytycznym</string>
</resources>