<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/globalStats">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="30"
            tools:context=".global.GlobalFragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="5"
                android:background="@drawable/header">

                <TextView
                    android:id="@+id/regionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inknut_antiqua_light"
                    android:shadowColor="#000000"
                    android:text="@string/statistics"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/stateDate"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:background="@drawable/style_spinner"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/currentFlag"
                    android:layout_width="90sp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:width="90dp"
                    android:contentDescription="@string/flag"
                    android:gravity="center_vertical"
                    android:padding="3dp"
                    android:scaleX="1.40"
                    android:scaleY="1.40"
                    android:src="@raw/az"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="348dp" />

                <TextView
                    android:id="@+id/currentCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="3dp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/flag"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_height="1dp"
                android:layout_weight="10"
                android:background="@color/colorBorder" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="251dp"
                android:layout_weight="25"
                android:columnCount="2"
                android:padding="14dp"
                android:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/color"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginBottom="14dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="@drawable/card_gradient">

                        <TextView
                            android:id="@+id/newCasesLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/new_cases"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/newCasesText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="28sp"
                            android:textColor="@color/colorCasesChart"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginBottom="14dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="@drawable/card_gradient">

                        <TextView
                            android:id="@+id/newDeathsLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/new_deaths"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/newDeathsText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="28sp"
                            android:textColor="@color/colorDeathsChart"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="14dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="@drawable/card_gradient">

                        <TextView
                            android:id="@+id/totalCasesLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cases"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/totalCasesText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="26sp"
                            android:textColor="@color/colorCasesLine"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="14dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="@drawable/card_gradient">

                        <TextView
                            android:id="@+id/totalDeathsLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/totalDeathsText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="28sp"
                            android:textColor="@color/colorDeathsLine"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/overall_chart"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/casesChart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/new_cases_chart"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/newCasesChart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/new_deaths_chart"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/newDeathsChart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/recovered_chart"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/recoveredChart"
                    android:layout_width="match_parent"
                    android:layout_height="260dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>