<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="251dp"
    android:layout_weight="25"
    android:columnCount="2"
    android:padding="14dp"
    android:rowCount="2">

    <androidx.cardview.widget.CardView
        android:id="@+id/color1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="14dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/card_gradient">

            <TextView
                android:id="@+id/recoveredLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recoveredText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="@color/colorLine"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="14dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/card_gradient">

            <TextView
                android:id="@+id/activeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/activeText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="#056B85"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="14dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/card_gradient">

            <TextView
                android:id="@+id/criticalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/critical"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/criticalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textColor="#FF1774"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="14dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/card_gradient">

            <TextView
                android:id="@+id/testsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tests"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/testsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="#3E9500"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>